Fix the header image and correct the alignment.

--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ ul {
 .top-image {
     max-width: 20%;
 
+    display: flex;
+    justify-content: flex-end;
+
 }
 
 .info-segment {
